credence/language/lexer.cc
/* Generated by re2c 4.5.1 on Sun Jul  5 02:37:31 2026 */
#line 1 "credence/language/lexer.re"
/*****************************************************************************
 * Copyright (c) Jahan Addison
 *
 * This software is dual-licensed under the Apache License, Version 2.0 or
 * the GNU General Public License, Version 3.0 or later.
 *
 * You may use this work, in part or in whole, under the terms of either
 * license.
 *
 * See the LICENSE.Apache-v2 and LICENSE.GPL-v3 files in the project root
 * for the full text of these licenses.
 ****************************************************************************/

// GENERATED FILE -- do not edit lexer.cc by hand.
//
// Regenerate with:
//   re2c -o credence/language/lexer.cc credence/language/lexer.re
//
// Token rules are a direct port of the lexical grammar in grammar.lark /
// BLexer.g4: identifiers/labels capped at 8 characters, "true"/"false" are
// reserved words (matched before the identifier rule so they win), float
// constants require an "f"/"F" suffix (an unsuffixed "3.14" instead lexes as
// INTEGER "3", DOT, INTEGER "14" -- the "." is a parser-level concern, same
// as in the Lark/ANTLR grammars), and identifiers may contain '.' directly.

#include <credence/language/lexer.h>

namespace credence::language {

std::string_view token_type_to_string(Token_Type type)
{
    switch (type) {
        case Token_Type::END_OF_FILE:
            return "END_OF_FILE";
        case Token_Type::INVALID:
            return "INVALID";
        case Token_Type::IDENTIFIER:
            return "IDENTIFIER";
        case Token_Type::INTEGER:
            return "INTEGER";
        case Token_Type::FLOAT:
            return "FLOAT";
        case Token_Type::CHAR_LITERAL:
            return "CHAR_LITERAL";
        case Token_Type::STRING_LITERAL:
            return "STRING_LITERAL";
        case Token_Type::BOOL_LITERAL:
            return "BOOL_LITERAL";
        case Token_Type::KEYWORD_AUTO:
            return "KEYWORD_AUTO";
        case Token_Type::KEYWORD_EXTRN:
            return "KEYWORD_EXTRN";
        case Token_Type::KEYWORD_CASE:
            return "KEYWORD_CASE";
        case Token_Type::KEYWORD_GOTO:
            return "KEYWORD_GOTO";
        case Token_Type::KEYWORD_IF:
            return "KEYWORD_IF";
        case Token_Type::KEYWORD_ELSE:
            return "KEYWORD_ELSE";
        case Token_Type::KEYWORD_RETURN:
            return "KEYWORD_RETURN";
        case Token_Type::KEYWORD_WHILE:
            return "KEYWORD_WHILE";
        case Token_Type::KEYWORD_SWITCH:
            return "KEYWORD_SWITCH";
        case Token_Type::KEYWORD_BREAK:
            return "KEYWORD_BREAK";
        case Token_Type::LPAREN:
            return "LPAREN";
        case Token_Type::RPAREN:
            return "RPAREN";
        case Token_Type::LBRACE:
            return "LBRACE";
        case Token_Type::RBRACE:
            return "RBRACE";
        case Token_Type::LBRACKET:
            return "LBRACKET";
        case Token_Type::RBRACKET:
            return "RBRACKET";
        case Token_Type::COMMA:
            return "COMMA";
        case Token_Type::QUESTION:
            return "QUESTION";
        case Token_Type::COLON:
            return "COLON";
        case Token_Type::DOT:
            return "DOT";
        case Token_Type::SEMICOLON:
            return "SEMICOLON";
        case Token_Type::ASSIGN:
            return "ASSIGN";
        case Token_Type::PLUS:
            return "PLUS";
        case Token_Type::MINUS:
            return "MINUS";
        case Token_Type::STAR:
            return "STAR";
        case Token_Type::SLASH:
            return "SLASH";
        case Token_Type::PERCENT:
            return "PERCENT";
        case Token_Type::AMP:
            return "AMP";
        case Token_Type::PIPE:
            return "PIPE";
        case Token_Type::CARET:
            return "CARET";
        case Token_Type::TILDE:
            return "TILDE";
        case Token_Type::BANG:
            return "BANG";
        case Token_Type::EQ:
            return "EQ";
        case Token_Type::NEQ:
            return "NEQ";
        case Token_Type::LT:
            return "LT";
        case Token_Type::LE:
            return "LE";
        case Token_Type::GT:
            return "GT";
        case Token_Type::GE:
            return "GE";
        case Token_Type::SHL:
            return "SHL";
        case Token_Type::SHR:
            return "SHR";
        case Token_Type::AND_AND:
            return "AND_AND";
        case Token_Type::OR_OR:
            return "OR_OR";
        case Token_Type::INC:
            return "INC";
        case Token_Type::DEC:
            return "DEC";
    }
    return "INVALID";
}

#line 144 "credence/language/lexer.cc"
#define YYMAXFILL 8
#line 141 "credence/language/lexer.re"


namespace {
constexpr std::size_t PADDING = (YYMAXFILL > 0) ? YYMAXFILL : 1;
}

Lexer::Lexer(std::string source)
    : source_(std::move(source))
{
    source_.append(PADDING, '\0');
    cursor_ = source_.data();
    marker_ = source_.data();
    limit_ = source_.data() + source_.size();
    token_start_ = cursor_;
}

void Lexer::advance_line_column(const char* from, const char* to)
{
    for (const char* p = from; p < to; ++p) {
        if (*p == '\n') {
            ++line_;
            column_ = 1;
        } else {
            ++column_;
        }
    }
}

Token Lexer::make_token(Token_Type type)
{
    Token token;
    token.type = type;
    token.lexeme = std::string_view(
        token_start_, static_cast<std::size_t>(cursor_ - token_start_));
    token.start_pos =
        static_cast<std::size_t>(token_start_ - source_.data());
    token.end_pos = static_cast<std::size_t>(cursor_ - source_.data());
    token.line = line_;
    token.column = column_;
    advance_line_column(token_start_, cursor_);
    token.end_column = column_;
    return token;
}

Token Lexer::next()
{
    for (;;) {
        token_start_ = cursor_;
        
#line 196 "credence/language/lexer.cc"
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *cursor_;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy4;
		case '!': goto yy6;
		case '"': goto yy8;
		case '%': goto yy9;
		case '&': goto yy10;
		case '\'': goto yy12;
		case '(': goto yy13;
		case ')': goto yy14;
		case '*': goto yy15;
		case '+': goto yy16;
		case ',': goto yy18;
		case '-': goto yy19;
		case '.': goto yy21;
		case '/': goto yy22;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy24;
		case ':': goto yy26;
		case ';': goto yy27;
		case '<': goto yy28;
		case '=': goto yy30;
		case '>': goto yy32;
		case '?': goto yy34;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'd':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'u':
		case 'v':
		case 'x':
		case 'y':
		case 'z': goto yy35;
		case '[': goto yy37;
		case ']': goto yy38;
		case '^': goto yy39;
		case 'a': goto yy40;
		case 'b': goto yy41;
		case 'c': goto yy42;
		case 'e': goto yy43;
		case 'f': goto yy44;
		case 'g': goto yy45;
		case 'i': goto yy46;
		case 'r': goto yy47;
		case 's': goto yy48;
		case 't': goto yy49;
		case 'w': goto yy50;
		case '{': goto yy51;
		case '|': goto yy52;
		case '}': goto yy54;
		case '~': goto yy55;
		default: goto yy2;
	}
yy1:
	++cursor_;
#line 208 "credence/language/lexer.re"
	{ return make_token(Token_Type::END_OF_FILE); }
#line 302 "credence/language/lexer.cc"
yy2:
	++cursor_;
yy3:
#line 269 "credence/language/lexer.re"
	{ return make_token(Token_Type::INVALID); }
#line 308 "credence/language/lexer.cc"
yy4:
	yych = *++cursor_;
	switch (yych) {
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy4;
		default: goto yy5;
	}
yy5:
#line 209 "credence/language/lexer.re"
	{ advance_line_column(token_start_, cursor_); continue; }
#line 321 "credence/language/lexer.cc"
yy6:
	yych = *++cursor_;
	switch (yych) {
		case '=': goto yy56;
		default: goto yy7;
	}
yy7:
#line 265 "credence/language/lexer.re"
	{ return make_token(Token_Type::BANG); }
#line 331 "credence/language/lexer.cc"
yy8:
	yyaccept = 0;
	yych = *(marker_ = ++cursor_);
	switch (yych) {
		case 0x00:
		case '\n':
		case '\r': goto yy3;
		default: goto yy58;
	}
yy9:
	++cursor_;
#line 260 "credence/language/lexer.re"
	{ return make_token(Token_Type::PERCENT); }
#line 345 "credence/language/lexer.cc"
yy10:
	yych = *++cursor_;
	switch (yych) {
		case '&': goto yy62;
		default: goto yy11;
	}
yy11:
#line 261 "credence/language/lexer.re"
	{ return make_token(Token_Type::AMP); }
#line 355 "credence/language/lexer.cc"
yy12:
	yyaccept = 0;
	yych = *(marker_ = ++cursor_);
	if (yych <= 0x00) goto yy3;
	goto yy63;
yy13:
	++cursor_;
#line 232 "credence/language/lexer.re"
	{ return make_token(Token_Type::LPAREN); }
#line 365 "credence/language/lexer.cc"
yy14:
	++cursor_;
#line 233 "credence/language/lexer.re"
	{ return make_token(Token_Type::RPAREN); }
#line 370 "credence/language/lexer.cc"
yy15:
	++cursor_;
#line 258 "credence/language/lexer.re"
	{ return make_token(Token_Type::STAR); }
#line 375 "credence/language/lexer.cc"
yy16:
	yych = *++cursor_;
	switch (yych) {
		case '+': goto yy64;
		default: goto yy17;
	}
yy17:
#line 256 "credence/language/lexer.re"
	{ return make_token(Token_Type::PLUS); }
#line 385 "credence/language/lexer.cc"
yy18:
	++cursor_;
#line 238 "credence/language/lexer.re"
	{ return make_token(Token_Type::COMMA); }
#line 390 "credence/language/lexer.cc"
yy19:
	yych = *++cursor_;
	switch (yych) {
		case '-': goto yy65;
		default: goto yy20;
	}
yy20:
#line 257 "credence/language/lexer.re"
	{ return make_token(Token_Type::MINUS); }
#line 400 "credence/language/lexer.cc"
yy21:
	++cursor_;
#line 241 "credence/language/lexer.re"
	{ return make_token(Token_Type::DOT); }
#line 405 "credence/language/lexer.cc"
yy22:
	yych = *++cursor_;
	switch (yych) {
		case '*': goto yy66;
		case '/': goto yy67;
		default: goto yy23;
	}
yy23:
#line 259 "credence/language/lexer.re"
	{ return make_token(Token_Type::SLASH); }
#line 416 "credence/language/lexer.cc"
yy24:
	yyaccept = 1;
	yych = *(marker_ = ++cursor_);
	switch (yych) {
		case '.': goto yy69;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy24;
		case 'F':
		case 'f': goto yy70;
		default: goto yy25;
	}
yy25:
#line 227 "credence/language/lexer.re"
	{ return make_token(Token_Type::INTEGER); }
#line 439 "credence/language/lexer.cc"
yy26:
	++cursor_;
#line 240 "credence/language/lexer.re"
	{ return make_token(Token_Type::COLON); }
#line 444 "credence/language/lexer.cc"
yy27:
	++cursor_;
#line 242 "credence/language/lexer.re"
	{ return make_token(Token_Type::SEMICOLON); }
#line 449 "credence/language/lexer.cc"
yy28:
	yych = *++cursor_;
	switch (yych) {
		case '<': goto yy71;
		case '=': goto yy72;
		default: goto yy29;
	}
yy29:
#line 266 "credence/language/lexer.re"
	{ return make_token(Token_Type::LT); }
#line 460 "credence/language/lexer.cc"
yy30:
	yych = *++cursor_;
	switch (yych) {
		case '=': goto yy73;
		default: goto yy31;
	}
yy31:
#line 255 "credence/language/lexer.re"
	{ return make_token(Token_Type::ASSIGN); }
#line 470 "credence/language/lexer.cc"
yy32:
	yych = *++cursor_;
	switch (yych) {
		case '=': goto yy74;
		case '>': goto yy75;
		default: goto yy33;
	}
yy33:
#line 267 "credence/language/lexer.re"
	{ return make_token(Token_Type::GT); }
#line 481 "credence/language/lexer.cc"
yy34:
	++cursor_;
#line 239 "credence/language/lexer.re"
	{ return make_token(Token_Type::QUESTION); }
#line 486 "credence/language/lexer.cc"
yy35:
	yych = *++cursor_;
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy76;
		default: goto yy36;
	}
yy36:
#line 230 "credence/language/lexer.re"
	{ return make_token(Token_Type::IDENTIFIER); }
#line 559 "credence/language/lexer.cc"
yy37:
	++cursor_;
#line 236 "credence/language/lexer.re"
	{ return make_token(Token_Type::LBRACKET); }
#line 564 "credence/language/lexer.cc"
yy38:
	++cursor_;
#line 237 "credence/language/lexer.re"
	{ return make_token(Token_Type::RBRACKET); }
#line 569 "credence/language/lexer.cc"
yy39:
	++cursor_;
#line 263 "credence/language/lexer.re"
	{ return make_token(Token_Type::CARET); }
#line 574 "credence/language/lexer.cc"
yy40:
	yych = *++cursor_;
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy76;
		case 'u': goto yy77;
		default: goto yy36;
	}
yy41:
	yych = *++cursor_;
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy76;
		case 'r': goto yy78;
		default: goto yy36;
	}
yy42:
	yych = *++cursor_;
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy76;
		case 'a': goto yy79;
		default: goto yy36;
	}
yy43:
	yych = *++cursor_;
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'y':
		case 'z': goto yy76;
		case 'l': goto yy80;
		case 'x': goto yy81;
		default: goto yy36;
	}
yy44:
	yych = *++cursor_;
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy76;
		case 'a': goto yy82;
		default: goto yy36;
	}
yy45:
	yych = *++cursor_;
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy76;
		case 'o': goto yy83;
		default: goto yy36;
	}
yy46:
	yych = *++cursor_;
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
